infrastructure/kubernetes-openshift/route-fiap-car-resale-admin.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-05-29T01:23:35Z"
  name: vs-fiap-car-resale-admin
  namespace: alissonskt-dev
  resourceVersion: "4380814705"
  uid: eb9dab53-2872-4918-a706-abe01563684f
spec:
  host: vs-fiap-car-resale-admin-alissonskt-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  path: /fiap-car-resale/admin
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: fiap-car-resale-admin-svc
    weight: 100
  wildcardPolicy: None
